--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,6 +59,6 @@ jobs:
         run: |
           ./ceramic link
       - name: Build 
-        working-directory: .
+        working-directory: test-app
         run: |
           ceramic clay build web --setup --assets --debug
