--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -62,4 +62,4 @@ jobs:
         working-directory: test-app
         run: |
           ceramic clay build web --setup --assets --debug
-          ceramic clay build web --setup --assets --debug -D no_filter_root
+          ceramic clay build web --setup --assets --debug -D filter_root
